[package]
name = "mob"
version = "0.1.0"
authors = ["Herman J. Radtke III <hermanradtke@gmail.com>"]

[dependencies]
byteorder = "0.3"
env_logger = "0.3.1"
log = "0.3.1"
mio = { git = "https://github.com/carllerche/mio", rev = "ce5d4fb" }
slab = { git = "https://github.com/carllerche/slab", rev = "5476efcafb" }

[[bin]]
name = "mob-server"
path = "src/main.rs"

[[bin]]
name = "mob-client"
path = "src/client.rs"
