[package]
name = "mob"
version = "0.1.0"
authors = ["Herman J. Radtke III <hermanradtke@gmail.com>"]

[dependencies]
byteorder = "0.3"
env_logger = "0.3.1"
log = "0.3.1"
mio = "0.6.0"
slab = "0.3.0"

[[bin]]
name = "mob-server"
path = "src/main.rs"

[[bin]]
name = "mob-client"
path = "src/client.rs"
